--- a/cmd.html
+++ b/cmd.html
@@ -7,7 +7,7 @@
 <body>
     <h2 >Краткий справочник по командам командной оболочки (Cmd.exe)</h2>
     <ul style="text-align: justify;">
-        <li><strong>md (chdir) —</strong> показывает имя текущего каталога или выполняет смену текущего каталога;</li>
+        <li><strong>cmd (chdir) —</strong> показывает имя текущего каталога или выполняет смену текущего каталога;</li>
         <li><strong>del</strong> — копирует файлы или выполняет конкатенацию файлов;</li>
         <li><strong>time</strong> — показывает или устанавливает текущую дату;</li>
         <li><strong>copy (erase) —</strong> удаляет заданный файл, группу файлов или каталог;</li>
@@ -15,7 +15,7 @@
         <li><strong>echo</strong> — выводит текст в окно ....
         </li>
         <li><strong>exit</strong> — выход из оболочки командной строки;</li>
-        <li><strong>cd (mkdir)</strong> — создает подкаталог в текущем или заданном каталоге;</li>
+        <li><strong>cmd (mkdir)</strong> — создает подкаталог в текущем или заданном каталоге;</li>
         <li><strong>move</strong> — перемещает файл или группу файлов из текущего или заданного исходного каталога в
             указанный каталог. Также может переименовывать каталог;
         </li>
