--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="index.html">Главная</a></li>
           <li><a href="cmd.html">Командная строка Win</a></li>
           <li><a href="macOS.html">Терминал Mac</a></li>
-          <li><a href="git.html">Команды Git</a></li>
+          <li><a href="Final.html">Команды Git</a></li>
       </ul>
     </nav>
   </div>
@@ -44,6 +44,9 @@
   </div>
 </div>
 <footer>
+</footer>
+</body>
+</html>
 </footer>
 </body>
 </html>
